feat: swagger document for the user management apis
