# app/Http/Controllers/AuthenticationController.php
@@ -2,8 +2,9 @@
 
 namespace App\Http\Controllers;
 
-use App\Http\Requests\LoginRequest;
+
 use App\Http\Requests\RegisterRequest;
+use App\Http\Requests\User\LoginRequest;
 use App\Models\User;
 use Illuminate\Http\Request;
 use Illuminate\Support\Arr;
@@ -13,22 +14,114 @@ use Illuminate\Validation\ValidationException;
 
 class AuthenticationController extends Controller
 {
+
+    /**
+     * @OA\Get(path="/api/users/profile/me",
+     *   tags={"User Management"},
+     *   summary="Get profile infos",
+     *   description="Get profile infos",
+     *   operationId="getProfileInformations",
+     *
+     *   security={ {"bearer": {} }},
+     *
+     *   @OA\Response(
+     *     response=200,
+     *     description="successful operation",
+     *     @OA\Schema(
+     *       additionalProperties={
+     *         "type":"integer",
+     *         "format":"int32"
+     *       }
+     *     )
+     *   )
+     * )
+     */
     public function myProfile(Request $request)
     {
         return auth()->user();
 //        return $request->user();
     }
 
+
     /**
-     * array
+     * @OA\Post (
+     *      path="/api/sample2",
+     *      operationId="getSample",
+     *      tags={"Sample"},
+     *      summary="get sample",
+     *      description="return sample",
+     *
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/LoginRequest")
+     *      ),
+     *
+     *     @OA\Parameter(
+     *          name="department",
+     *          required=true,
+     *          in="header",
+     *          example=1,
+     *          ),
+     *
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/LoginRequest")
+     *       ),
+     *
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
      */
-    public function tokensCreate(Request $request): array
+
+    public function refreshToken(Request $request): array
     {
         $token = $request->user()->createToken($request->token_name);
         return ['token' => $token->plainTextToken];
     }
 
+
     /**
+     * @OA\Post (
+     *      path="/api/login",
+     *      operationId="login",
+     *      tags={"User Management"},
+     *      summary="login with email",
+     *      description="login with email",
+     *
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/LoginRequest")
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     *
      * @throws \Illuminate\Validation\ValidationException
      */
     public function loginEmail(LoginRequest $request)
@@ -40,6 +133,7 @@ class AuthenticationController extends Controller
                 'email' => ['The provided credentials are incorrect.'],
             ]);
         }
+
         return response([
             'token' => $user->createToken('tokens')->plainTextToken,
             'token_type' => 'Bearer',
@@ -47,7 +141,7 @@ class AuthenticationController extends Controller
     }
 
     //this method adds new users
-    public function createAccount(RegisterRequest $request)
+    public function register(RegisterRequest $request)
     {
         $attr = $request->validated();
 
@@ -64,13 +158,14 @@ class AuthenticationController extends Controller
     }
 
     //use this method to sign-in users
-    public function signIn(LoginRequest $request)
+    public function login(LoginRequest $request)
     {
         $attr = $request->validated();
 
         if (!Auth::attempt(Arr::only($attr, ['email', 'password']))) {
             return $this->error('Credentials not match', 401);
         }
+
         $user = $request->user();
 
         $tokenResult = $user->createToken('Personal Access Token');
@@ -82,7 +177,7 @@ class AuthenticationController extends Controller
     }
 
     // this method signs out users by removing tokens
-    public function signOut(): array
+    public function logout(): array
     {
         auth()->user()->tokens()->delete();
 
