# storage/api-docs/api-docs.json
@@ -2,9 +2,127 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Green Shop Api Documentaion By Swagger",
+        "description": "Green Shop Service Api Documentation (BehAndam Admin Services)",
+        "contact": {
+            "email": "saber.tabatabaee@gmail.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
         "version": "1.0"
     },
+    "servers": [
+        {
+            "url": "https://beitak.ir",
+            "description": "LOCAL API Server"
+        },
+        {
+            "url": "http://localhost:8000",
+            "description": "LOCAL API Server"
+        }
+    ],
     "paths": {
+        "/api/users/profile/me": {
+            "get": {
+                "tags": [
+                    "User Management"
+                ],
+                "summary": "Get profile infos",
+                "description": "Get profile infos",
+                "operationId": "getProfileInformations",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/sample2": {
+            "post": {
+                "tags": [
+                    "Sample"
+                ],
+                "summary": "get sample",
+                "description": "return sample",
+                "operationId": "getSample",
+                "parameters": [
+                    {
+                        "name": "department",
+                        "in": "header",
+                        "required": true,
+                        "example": 1
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/LoginRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/LoginRequest"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/login": {
+            "post": {
+                "tags": [
+                    "User Management"
+                ],
+                "summary": "login with email",
+                "description": "login with email",
+                "operationId": "login",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/LoginRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/api/blog-posts": {
             "get": {
                 "tags": [
@@ -242,6 +360,39 @@
             }
         }
     },
+    "components": {
+        "schemas": {
+            "LoginRequest": {
+                "title": "LoginRequest",
+                "description": "Login Request",
+                "required": [
+                    "email",
+                    "password",
+                    "device_name"
+                ],
+                "type": "object",
+                "example": {
+                    "email": "saber.tabataba@gmail.com",
+                    "password": "adminadmin",
+                    "device_name": "flutter"
+                }
+            }
+        },
+        "securitySchemes": {
+            "bearer": {
+                "type": "http",
+                "description": "Use username & password for token",
+                "name": "BearerAuth",
+                "scheme": "bearer"
+            }
+        }
+    },
+    "tags": [
+        {
+            "name": "Green Shop Service",
+            "description": "API Endpoints of Green Shop Service"
+        }
+    ],
     "security": [
         []
     ]
